--- a/iniciodesesion.css
+++ b/iniciodesesion.css
@@ -1,18 +1,23 @@
 .iniciosesion{
-    background: rgb(255, 247, 247);
+    background: rgb(163, 20, 120);
     margin: auto;
     margin-top:150px ;
     text-align: center;
     padding: 50px;
     width: 500px;
+    color: #fff;
     border-radius: 10px;
-    box-shadow: 0 0 10px 1px;
+    box-shadow: 0 0 10px #250429;
+    transition: .3s ease;
 }
 
-
+.iniciosesion:hover{
+    scale: 1.1;
+}
 body{
     background: #DDD;
     font-family: sans-serif;
+    background: url(./pexels-iriser-1408221.jpg) center center fixed no-repeat;
 }
 
 h1{
@@ -21,4 +26,18 @@ h1{
 }
 label{
     margin-left: auto;
+}
+input{
+    padding: 10px;
+}
+button{
+    padding: 20px;
+    border-radius: 10px;
+    border: none;
+    background: #d941df;
+    color: white;
+
+}
+button:hover{
+    background: #e71eab;
 }
